--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         }
         #game-container {
             text-align: center;
+            width: 100%;
+            max-width: 500px;
+            padding: 10px;
         }
         #game-board {
             display: grid;
@@ -27,14 +30,14 @@
             margin-bottom: 20px;
         }
         .tile {
-            width: 100px;
-            height: 100px;
+            aspect-ratio: 1 / 1;
             background-color: #cdc1b4;
             border-radius: 3px;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 50px;
+            font-size: 10vw;
+            max-font-size: 50px;
         }
         #score {
             font-size: 24px;
@@ -140,7 +143,7 @@
             }
 
             switch (direction) {
-                case 'ArrowUp':
+                case 'up':
                     for (let j = 0; j < 4; j++) {
                         let column = [board[0][j], board[1][j], board[2][j], board[3][j]];
                         column = merge(column);
@@ -152,7 +155,7 @@
                         }
                     }
                     break;
-                case 'ArrowDown':
+                case 'down':
                     for (let j = 0; j < 4; j++) {
                         let column = [board[3][j], board[2][j], board[1][j], board[0][j]];
                         column = merge(column);
@@ -164,7 +167,7 @@
                         }
                     }
                     break;
-                case 'ArrowLeft':
+                case 'left':
                     for (let i = 0; i < 4; i++) {
                         let row = merge(board[i]);
                         if (JSON.stringify(newBoard[i]) !== JSON.stringify(row)) {
@@ -173,7 +176,7 @@
                         }
                     }
                     break;
-                case 'ArrowRight':
+                case 'right':
                     for (let i = 0; i < 4; i++) {
                         let row = merge(board[i].reverse()).reverse();
                         if (JSON.stringify(newBoard[i]) !== JSON.stringify(row)) {
@@ -214,10 +217,57 @@
         }
 
         document.addEventListener('keydown', (e) => {
-            if (['ArrowUp', 'ArrowDown', 'ArrowLeft', 'ArrowRight'].includes(e.key)) {
+            const key = e.key;
+            const arrowToDirection = {
+                'ArrowUp': 'up',
+                'ArrowDown': 'down',
+                'ArrowLeft': 'left',
+                'ArrowRight': 'right'
+            };
+            if (arrowToDirection[key]) {
                 e.preventDefault();
-                move(e.key);
+                move(arrowToDirection[key]);
             }
+        });
+
+        // Touch event handling
+        let touchStartX, touchStartY;
+        const gameBoard = document.getElementById('game-board');
+
+        gameBoard.addEventListener('touchstart', (e) => {
+            touchStartX = e.touches[0].clientX;
+            touchStartY = e.touches[0].clientY;
+        });
+
+        gameBoard.addEventListener('touchend', (e) => {
+            if (!touchStartX || !touchStartY) {
+                return;
+            }
+
+            let touchEndX = e.changedTouches[0].clientX;
+            let touchEndY = e.changedTouches[0].clientY;
+
+            let dx = touchEndX - touchStartX;
+            let dy = touchEndY - touchStartY;
+
+            if (Math.abs(dx) > Math.abs(dy)) {
+                // Horizontal swipe
+                if (dx > 0) {
+                    move('right');
+                } else {
+                    move('left');
+                }
+            } else {
+                // Vertical swipe
+                if (dy > 0) {
+                    move('down');
+                } else {
+                    move('up');
+                }
+            }
+
+            touchStartX = null;
+            touchStartY = null;
         });
 
         initializeGame();
