--- a/tutti.html
+++ b/tutti.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Fullscreen Video Background</title>
+    <title>Optimized Fullscreen Video Background</title>
     <style>
         body, html {
             margin: 0;
@@ -18,79 +18,42 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
-            z-index: -1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         #video-background {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            min-width: 100%;
-            min-height: 100%;
+            height: 100%;
             width: auto;
-            height: auto;
-            transform: translateX(-50%) translateY(-50%);
-            object-fit: cover;
+            object-fit: contain;
+            max-width: 100%;
+            max-height: 100%;
         }
-        .content {
-            position: relative;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            z-index: 1;
-        }
-        #play-button {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 10px 20px;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            border: none;
-            cursor: pointer;
-            z-index: 2;
+        @media (max-aspect-ratio: 9/16) {
+            #video-background {
+                width: 100%;
+                height: auto;
+            }
         }
     </style>
 </head>
 <body>
     <div class="video-container">
-        <video id="video-background" loop muted playsinline>
+        <video id="video-background" autoplay loop muted playsinline>
             <source src="Idle & Talk & Funny.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    </div>
-    
-    <button id="play-button">Play Video</button>
-
-    <div class="content">
-        <h1>Welcome to My Fullscreen Video App</h1>
-        <p>This is some sample content that appears over the video.</p>
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var video = document.getElementById('video-background');
-            var playButton = document.getElementById('play-button');
-
-            playButton.addEventListener('click', function() {
-                if (video.paused) {
-                    video.play();
-                    playButton.textContent = 'Pause';
-                } else {
-                    video.pause();
-                    playButton.textContent = 'Play';
-                }
-            });
-
-            // Try to play the video automatically
+            
+            // Attempt to play the video automatically
             var playPromise = video.play();
             if (playPromise !== undefined) {
-                playPromise.then(_ => {
-                    // Autoplay started
-                    playButton.textContent = 'Pause';
-                }).catch(error => {
-                    // Autoplay was prevented
-                    console.log("Autoplay was prevented");
+                playPromise.catch(error => {
+                    console.log("Autoplay was prevented, but the video will play when it can");
                 });
             }
         });
