--- a/tutti.html
+++ b/tutti.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="video-container">
-        <video id="video-background" autoplay loop muted playsinline>
+        <video id="video-background" autoplay loop playsinline>
             <source src="Idle & Talk & Funny.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
