--- a/tutti.html
+++ b/tutti.html
@@ -24,42 +24,38 @@
             cursor: pointer;
         }
         #video-background {
-            height: 100%;
-            width: auto;
-            object-fit: contain;
-            max-width: 100%;
-            max-height: 100%;
-        }
-        @media (max-aspect-ratio: 9/16) {
-            #video-background {
-                width: 100%;
-                height: auto;
-            }
+            min-height: 100%;
+            min-width: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         .pointing-hand {
             position: absolute;
-            font-size: 48px; /* Adjust size as needed */
+            font-size: 96px; /* Doubled the size */
             z-index: 10;
         }
         .hand-top {
-            top: 10%;
+            top: 20%; /* Moved closer to center */
             left: 50%;
-            transform: translate(-50%, -50%) rotate(180deg);
+            transform: translate(-50%, -50%);
         }
         .hand-right {
             top: 50%;
             right: 10%;
-            transform: translate(50%, -50%) rotate(270deg);
+            transform: translate(50%, -50%) rotate(90deg);
         }
         .hand-bottom {
-            bottom: 10%;
+            bottom: 20%; /* Moved closer to center */
             left: 50%;
-            transform: translate(-50%, 50%);
+            transform: translate(-50%, 50%) rotate(180deg);
         }
         .hand-left {
             top: 50%;
             left: 10%;
-            transform: translate(-50%, -50%) rotate(90deg);
+            transform: translate(-50%, -50%) rotate(270deg);
         }
     </style>
 </head>
