--- a/tutti.html
+++ b/tutti.html
@@ -64,7 +64,7 @@
 <body>
     <div class="video-container">
         <video id="video-background" playsinline>
-            <source src="Idle & Talk & Funny.mp4" type="video/mp4">
+            <source src="laugh.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="pointing-hand hand-top">👇</div>
