--- a/tutti.html
+++ b/tutti.html
@@ -24,40 +24,16 @@
             cursor: pointer;
         }
         #video-background {
+            width: 100vw;
+            height: 177.78vw; /* 100 * 1920 / 1080 */
+            max-height: 100vh;
+            max-width: 56.25vh; /* 100 * 1080 / 1920 */
+            margin: auto;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            min-width: 100%;
-            min-height: 100%;
-            width: auto;
-            height: auto;
             object-fit: cover;
-        }
-        .pointing-hand {
-            position: absolute;
-            font-size: 96px; /* Doubled the size */
-            z-index: 10;
-        }
-        .hand-top {
-            top: 15%; /* Moved closer to center */
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        .hand-right {
-            top: 50%;
-            right: 5%;
-            transform: translate(-50%, -50%) rotate(270deg);
-        }
-        .hand-bottom {
-            bottom: 15%; /* Moved closer to center */
-            left: 50%;
-            transform: translate(-50%, 50%) rotate(180deg);
-        }
-        .hand-left {
-            top: 50%;
-            left: 5%;
-            transform: translate(-50%, -50%) rotate(90deg);
         }
     </style>
 </head>
@@ -67,10 +43,6 @@
             <source src="laugh.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <div class="pointing-hand hand-top">👇</div>
-        <div class="pointing-hand hand-right">👇</div>
-        <div class="pointing-hand hand-bottom">👇</div>
-        <div class="pointing-hand hand-left">👇</div>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
