--- a/emma.html
+++ b/emma.html
@@ -11,7 +11,7 @@
             height: 100%;
             width: 100%;
             overflow: hidden;
-            position: fixed; /* Prevents mobile browser address bar from affecting layout */
+            position: fixed;
         }
 
         .background-container {
@@ -21,7 +21,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background-color: #000; /* Fallback color while image loads */
+            background-color: #000;
         }
 
         .background-image {
@@ -29,21 +29,30 @@
             height: 100%;
             object-fit: cover;
             object-position: center;
-            max-width: 100vw; /* Ensures image doesn't overflow viewport width */
-            max-height: 100vh; /* Ensures image doesn't overflow viewport height */
+            max-width: 100vw;
+            max-height: 100vh;
         }
 
         elevenlabs-convai {
-            position: relative;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             z-index: 1;
-            display: block;
-            height: 100vh; /* Full viewport height */
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         /* Additional mobile optimizations */
         @media screen and (max-width: 768px) {
             .background-image {
-                object-position: center center; /* Centers image on mobile */
+                object-position: center center;
+            }
+            
+            elevenlabs-convai {
+                padding-top: env(safe-area-inset-top); /* Accounts for notches and status bars */
             }
         }
     </style>
