--- a/emma.html
+++ b/emma.html
@@ -35,24 +35,17 @@
 
         elevenlabs-convai {
             position: fixed;
-            top: 0;
+            bottom: 0;
             left: 0;
             width: 100%;
-            height: 100%;
             z-index: 1;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            padding-bottom: env(safe-area-inset-bottom); /* For devices with bottom bars */
         }
 
         /* Additional mobile optimizations */
         @media screen and (max-width: 768px) {
             .background-image {
                 object-position: center center;
-            }
-            
-            elevenlabs-convai {
-                padding-top: env(safe-area-inset-top); /* Accounts for notches and status bars */
             }
         }
     </style>
